k8s/kube-dashboard.yaml
# ------------------- Dashboard Deployment ------------------- # 

kind: Deployment 
apiVersion: apps/v1 
metadata: 
  labels: 
    k8s-app: kubernetes-dashboard 
  name: kubernetes-dashboard 
  namespace: kube-system 
spec: 
  replicas: 1 
  revisionHistoryLimit: 10 
  selector: 
    matchLabels: 
      k8s-app: kubernetes-dashboard 
  template: 
    metadata: 
      labels: 
        k8s-app: kubernetes-dashboard 
    spec: 
      containers: 
      - name: kubernetes-dashboard 
        image: k8s.gcr.io/kubernetes-dashboard-amd64:v1.10.1 
        ports: 
        - containerPort: 8443 
          protocol: TCP 
        args: 
          - --auto-generate-certificates 
          # Uncomment the following line to manually specify Kubernetes API server Host 
          # If not specified, Dashboard will attempt to auto discover the API server and connect 
          # to it. Uncomment only if the default does not work. 
          # - --apiserver-host=http://my-address:port 
        volumeMounts: 
        - name: kubernetes-dashboard-certs 
          mountPath: /certs 
          # Create on-disk volume to store exec logs 
        - mountPath: /tmp 
          name: tmp-volume 
        livenessProbe: 
          httpGet: 
            scheme: HTTPS 
            path: / 
            port: 8443 
          initialDelaySeconds: 30 
          timeoutSeconds: 30 
      volumes: 
      - name: kubernetes-dashboard-certs 
        secret: 
          secretName: kubernetes-dashboard-certs 
      - name: tmp-volume 
        emptyDir: {} 
      serviceAccountName: kubernetes-dashboard 
      # Comment the following tolerations if Dashboard must not be deployed on master 
      tolerations: 
      - key: node-role.kubernetes.io/master 
        effect: NoSchedule 

---
# ------------------- Dashboard Service ------------------- # 

kind: Service 
apiVersion: v1 
metadata: 
  labels: 
    k8s-app: kubernetes-dashboard 
  name: kubernetes-dashboard 
  namespace: kube-system 
spec: 
  type: LoadBalancer 
  ports: 
    - port: 443 
      targetPort: 8443 
  selector: 
    k8s-app: kubernetes-dashboard
