k8s/pod_pvc_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  labels:
    app: minimal-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.k8s.hacore.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
  tls:
  - hosts:
    - test.k8s.hacore.ru
    secretName: socks-tls-2
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: pv-lb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: nginx-deployment 
spec:
  selector: 
    matchLabels: 
      app: pv-lb 
  replicas: 3
  template: 
    metadata: 
      labels: 
        app: pv-lb 
    spec: 
      volumes:
      - name: lb-pvc-volume
        persistentVolumeClaim:
                claimName: heketi-pvc 
      containers: 
      - name: python-hostname
        image: suicidesky92/pythontest:latest
        ports: 
        - containerPort: 5000
        volumeMounts:
        - name: lb-pvc-volume
          mountPath: /usr/share/nginx/html
